avoid overlap with noty boxes

--- a/html/css/git-deps.css
+++ b/html/css/git-deps.css
@@ -16,6 +16,10 @@ body {
     right: 0;
 }
 
+#top p {
+    margin-right: 300px; /* Avoid overlap with noty boxes */
+}
+
 #svg-container {
     flex: 1;
     border: 1px solid #ccc;     /* width has to be half of SVG_MARGIN */
